# sr-system

./: .gitignore  .pdm-python  README.md  pyproject.toml  requirements.txt
system/submissions/: admin.py  forms.py  models.py  urls.py  views.py
system/submissions/migrations/: 0001_initial.py  0002_alter_submission_submission_date.py  0003_alter_submission_evidence_file.py  0004_evidencefile.py  0005_alter_submission_evidence_file_delete_evidencefile.py  0006_alter_submission_evidence_file.py
system/submissions/templates/: index.html
system/submissions/templates/submissions/: case_status.html  submit_form.html  success.html
system/system/: settings.py  urls.py
system/system/static/: styles.css
